# ai-driven-dev-example

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: guard.py  ruff_fix.py  trace.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/todo/: core.py  mcp_server.py  test_core.py  test_mcp_server.py
docs/: initial-prompt.md  retrospective.md  roadmap-v2.md
docs/concepts/: 00-llm-nature.md  01-cage-and-permissions.md  02-context-and-spec.md  03-context-lifetime.md  04-skills.md  05-subagents.md  06-hooks.md  07-observability.md  08-eval.md
docs/session-logs/: 000-setup.md  001-sprint0.md  002-sprint1-verification-net.md  003-sprint1-cage-and-permissions.md  004-sprint1-retro.md  005-sprint2-context.md  006-sprint2-spec-driven.md  007-sprint2-retro.md  008-sprint3-mcp.md  009-sprint3-tool-poisoning.md  010-sprint3-skills.md  011-sprint3-retro.md  012-sprint4-import-example3.md  013-sprint4-priority.md  014-sprint4-retro.md  015-sprint5-hooks.md  016-sprint6-observability.md  017-sprint7-eval.md
docs/specs/: example3-todo-priority.md  todo-core.md
docs/traces/: README.md
eval/: README.md  harness.py  pricing.py  prompts.py  run.py  solvers.py  test_eval_harness.py
eval/fixtures/: prompt_a.jsonl  prompt_b.jsonl
experiments/00-hallucinated-api/: README.md  make_slug.py  make_slug_hallucinated.py  test_make_slug.py
experiments/01-blast-radius/: README.md  demo.sh
experiments/06-hooks/: README.md  (+2 more)
tools/: test_trace_summary.py  trace_summary.py
(+17 files in other folders)
